--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,6 @@
-alabaster==0.7.13
-Babel==2.12.1
-bleach==6.0.0
-build==0.10.0
-certifi==2023.7.22
-charset-normalizer==3.2.0
-colorama==0.4.6
-docutils==0.20.1
-idna==3.4
-imagesize==1.4.1
-importlib-metadata==6.8.0
-iniconfig==2.0.0
-jaraco.classes==3.3.0
-Jinja2==3.1.3
-keyring==24.2.0
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-mdurl==0.1.2
-more-itertools==10.1.0
-packaging==23.1
-pkginfo==1.9.6
-pluggy==1.2.0
-Pygments==2.15.1
-pyproject_hooks==1.0.0
-pytest==7.4.0
-pywin32-ctypes==0.2.2
-readme-renderer==40.0
-requests==2.31.0
-requests-toolbelt==1.0.0
-rfc3986==2.0.0
-rich==13.5.2
-six==1.16.0
-snowballstemmer==2.2.0
-Sphinx==7.1.2
-sphinxcontrib-applehelp==1.0.4
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.1
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
-twine==4.0.2
-urllib3==2.2.1
-webencodings==0.5.1
-zipp==3.16.2
-beautifulsoup4~=4.12.2
-unidecode~=1.3.6
-lxml
+requests~=2.31.0
 praw~=7.7.1
-prawcore~=2.3.0
+beautifulsoup4~=4.12.2
+httplib2~=0.22.0
+google-api-python-client~=2.125.0
+Unidecode~=1.3.8
