--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ beautifulsoup4~=4.12.2
 httplib2~=0.22.0
 google-api-python-client~=2.125.0
 Unidecode~=1.3.8
-onebag~=0.1.0
+onebag~=0.1.3
+lxml~=5.2.1
